2023-10-10T08:17:16Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6466576931 # 1253
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-10
* notice: last 14d: unq all: 6 4154
* notice: prev accum: outdated-unq outdated-all / unq all: 1735 164356 / 1772 168565
* notice: next accum: outdated-unq outdated-all / unq all: 1735 164356 / 1775 168678
* notice: prev exec diff / last date diff / accum: unq all: +3 +113 -1 -124 / +3 +113 -0 -0 / 3 113
* notice: removed / changed dates: [] / [2023-09-26 2023-10-10]

2023-10-10T00:58:41Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6463360355 # 1252
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-10
* notice: last 14d: unq all: 6 4165
* notice: prev accum: outdated-unq outdated-all / unq all: 1732 164055 / 1770 168465
* notice: next accum: outdated-unq outdated-all / unq all: 1735 164356 / 1772 168565
* notice: prev exec diff / last date diff / accum: unq all: +2 +100 -0 -44 / +5 +305 -0 -0 / 5 305
* notice: removed / changed dates: [2023-09-25] / [2023-09-26 2023-10-09]

2023-10-09T16:17:46Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6459212856 # 1251
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-09
* notice: last 14d: unq all: 4 4150
* notice: prev accum: outdated-unq outdated-all / unq all: 1732 164055 / 1770 168373
* notice: next accum: outdated-unq outdated-all / unq all: 1732 164055 / 1770 168465
* notice: prev exec diff / last date diff / accum: unq all: +0 +92 -0 -92 / +3 +205 -0 -0 / 3 205
* notice: removed / changed dates: [] / [2023-09-25 2023-10-09]

2023-10-09T08:18:17Z: