@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2023-10-10T08:17:16Z",
-  "count" : 133,
-  "count_minmax" : [ 113, 301 ],
-  "count_decinc" : [ -168, +301 ],
+  "timestamp" : "2023-10-10T16:17:37Z",
+  "count" : 41,
+  "count_minmax" : [ 41, 301 ],
+  "count_decinc" : [ -260, +301 ],
   "uniques" : 2,
   "uniques_minmax" : [ 2, 3 ],
   "uniques_decinc" : [ -1, +3 ]
