@@ -1,10 +1,10 @@
 {
-  "count": 4154,
+  "count": 4156,
   "uniques": 6,
   "clones": [
     {
       "timestamp": "2023-09-26T00:00:00Z",
-      "count": 133,
+      "count": 41,
       "uniques": 2
     },
     {
@@ -74,7 +74,7 @@
     },
     {
       "timestamp": "2023-10-10T00:00:00Z",
-      "count": 113,
+      "count": 207,
       "uniques": 3
     }
   ]
