@@ -1,3 +1,12 @@
+2023-10-10T16:17:37Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6472027100 # 1254
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-10
+* notice: last 14d: unq all: 6 4156
+* notice: prev accum: outdated-unq outdated-all / unq all: 1735 164356 / 1775 168678
+* notice: next accum: outdated-unq outdated-all / unq all: 1735 164356 / 1775 168772
+* notice: prev exec diff / last date diff / accum: unq all: +0 +94 -0 -92 / +3 +207 -0 -0 / 3 207
+* notice: removed / changed dates: [] / [2023-09-26 2023-10-10]
+
 2023-10-10T08:17:16Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6466576931 # 1253
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-10
